--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "gatsby": "4.19.2",
-    "gatsby-image": "^2.3.1",
     "gatsby-plugin-google-analytics": "^4.19.0",
+    "gatsby-plugin-image": "^2.19.0",
     "gatsby-plugin-manifest": "^4.19.0",
     "gatsby-plugin-offline": "^5.19.0",
     "gatsby-plugin-react-helmet": "^5.19.0",
