--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "react-helmet": "^6.1.0",
     "react-typography": "^0.16.20",
     "typeface-merriweather": "1.1.13",
-    "typeface-montserrat": "1.1.13",
-    "typography": "^0.16.21",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "typeface-montserrat": "1.1.13"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
