ugpraded dependencies to latest.

--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
   "name": "gatsby-starter-blog",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "A blog about health and technology",
   "version": "0.1.0",
-  "author": "Bram Pijper <brampijper@gmail.com>",
+  "author": "Bram Pijper <brampijper@proton.me>",
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "gatsby": "^4.24.4",
-    "gatsby-plugin-feed": "^4.25.0",
-    "gatsby-plugin-google-analytics": "^4.19.0",
-    "gatsby-plugin-image": "^2.19.0",
-    "gatsby-plugin-manifest": "^4.19.0",
-    "gatsby-plugin-offline": "^5.19.0",
-    "gatsby-plugin-sharp": "^4.19.0",
-    "gatsby-plugin-typography": "^4.19.0",
-    "gatsby-remark-copy-linked-files": "^5.19.0",
-    "gatsby-remark-images": "^6.19.0",
-    "gatsby-remark-prismjs": "^6.19.0",
-    "gatsby-source-filesystem": "^4.19.0",
-    "gatsby-transformer-remark": "^5.19.0",
-    "gatsby-transformer-sharp": "^4.19.0",
-    "postcss": "^8.4.14",
+    "gatsby": "^5.11.0",
+    "gatsby-plugin-feed": "^5.11.0",
+    "gatsby-plugin-google-analytics": "^5.11.0",
+    "gatsby-plugin-image": "^3.11.0",
+    "gatsby-plugin-manifest": "^5.11.0",
+    "gatsby-plugin-offline": "^6.11.0",
+    "gatsby-plugin-sharp": "^5.11.0",
+    "gatsby-plugin-typography": "^5.11.0",
+    "gatsby-remark-copy-linked-files": "^6.11.0",
+    "gatsby-remark-images": "^7.11.0",
+    "gatsby-remark-prismjs": "^7.11.0",
+    "gatsby-source-filesystem": "^5.11.0",
+    "gatsby-transformer-remark": "^6.11.0",
+    "gatsby-transformer-sharp": "^5.11.0",
     "prismjs": "^1.28.0",
-    "react": "^18.0.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-typography": "^0.16.20",
     "typeface-merriweather": "1.1.13",
     "typeface-montserrat": "1.1.13"
   },
   "devDependencies": {
-    "prettier": "^2.7.1"
+    "autoprefixer": "^10.4.14",
+    "gatsby-plugin-postcss": "^6.11.0",
+    "postcss": "^8.4.24",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^3.3.2"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
